--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -79,7 +79,7 @@ jobs:
        #   sudo usermod -aG docker ${{ secrets.DOCKER_USER }}
      #     '
           
-      #env:
+      #env
           #DOCKER_USER: ${{ secrets.DOCKER_USER }}
 
 
