--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -43,12 +43,12 @@ jobs:
     needs: [setup-project-environment]
     env:
       ENV: ${{ needs.setup-project-environment.outputs.env_name }}
-      ENV_UPPER: ${{ needs.setup-project-environment.outputs.env_name }}
       IMG_TAG: ${{ needs.setup-project-environment.outputs.sha }}
+      ENV_SECRET: ${{ env.ENV }}_ENV_VARS
       
     steps:
     - name: Test Variable
-      run: echo "${{ secrets[env.ENV + '_ENV_VARS'] }}"
+      run: echo "${{ secrets[env.ENV_SECRET] }}"
   #   - name: Checkout GitHub Action
   #     uses: actions/checkout@v3
   #     with:
