--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -49,8 +49,7 @@ jobs:
     steps:
     - name: Test Variable
       run: |
-        echo ${{ secrets[env.ENV_SECRET] }} > .env
-        cat .env
+        echo ${{ secrets[env.ENV_SECRET] }} | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
   #   - name: Checkout GitHub Action
   #     uses: actions/checkout@v3
   #     with:
